[package]
name = "navaja"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = [ "derive" ] }
ipnet = "2.10.1"
tokio = { version = "1.40.0", features = [ "net", "time", "rt-multi-thread", "macros" ] }
reqwest = { version = "0.12.8", features = ["json"] }
promkit = "0.5.0"
chrono = "0.4.38"
webbrowser = "1.0.2"
serde_json = "1.0.132"
